--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae odit placeat repellat iure repellendus iste itaque facilis corrupti, qui culpa laudantium quia unde nihil minus, commodi deserunt natus cupiditate explicabo sequi assumenda tenetur cumque doloremque libero. Reprehenderit, totam eligendi praesentium consequuntur provident voluptate aliquid quia enim repudiandae, iusto possimus eius.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae odit placeat repellat iure repellendus iste itaque facilis corrupti, qui culpa laudantium quia unde nihil minus, commodi deserunt natus cupiditate explicabo sequi assumenda tenetur cumque doloremque libero. Reprehenderit, totam eligendi praesentium consequuntur provident voluptate aliquid quia enim repudiandae, iusto possimus eius.</p>
     </main>
-
+    
     <!-- Script creados -->
-    <script src="/js/app.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
