Corregimos el footer e integramos whatsapp

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
         </div>
         <div class="créditos">
             <div class="redes">
-                <a href="#"><i class="fa-brands fa-whatsapp redes__i"></i></a>
+                <a href="https://api.whatsapp.com/send/?phone=9631567144&text=Hola%20puedes%20enviarme%20un%20mensaje%20y%20realizar%20su%20cotizacion" target="_blank"><i class="fa-brands fa-whatsapp redes__i"></i></a>
                 <a href="#"><i class="fa-brands fa-facebook-f redes__i"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram redes__i"></i></a>
             </div>
             <div class="créditos__desarrollo">
-                <h2 class="créditos__nombres">2022 &copy; Miguel Angel | Benjamin Olan</h2>
+                <h2 class="créditos__nombres">2022 &copy; - Desarrolladores Miguel Angel | Benjamin Olan</h2>
             </div>
         </div>  
     </footer>
