--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <input type="submit" value="Enviar" class="enviar__formulario">
                         </div>
 
-                        <input type="hidden" name="_next" value="http://127.0.0.1:5500/">
+                        <input type="hidden" name="_next" value="https://mproyectosweb.github.io/ferreteriaagna/">
                         <input type="hidden" name="_captcha" value="false">
                     </form>
                 </div>
