Dividimos los CSS y agregamos el responsive

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Ferretería AGNA</title>
     <script src="https://kit.fontawesome.com/c8f0c2f663.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="shortcut icon" href="./images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,12 +24,17 @@
             </div>
 
             <div class="lists">
+                <input type="checkbox" id="check">
+                <label for="check" class="menu__hamburguesa">
+                    <i class="fas fa-bars"></i>
+                </label>
                 <ul class="lists__ul">
-                    <li><a href="#" class="lists__enlaces lists__a">Nuestra empresa</a></li>
+                    <li><a href="#" class="lists__enlaces lists__a" target="_blank">Nuestra empresa</a></li>
                     <li><a href="#" class="lists__enlaces">Sucursales</a></li>
                     <li><a href="#" class="lists__enlaces">Promociones</a></li>
                 </ul>
             </div>
+            
         </nav>
     </header>
     <!-- dsa -->
@@ -48,7 +55,7 @@
             </div>
 
             <div class="about__logo">
-                <img src="./images/logo.png" alt="">
+                <img src="./images/logo.png" alt="" class="about__img">
             </div>
 
             <div class="objetivo">
