--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <i class="fas fa-bars"></i>
                 </label>
                 <ul class="lists__ul">
-                    <li><a href="#" class="lists__enlaces lists__a">Nuestra empresa</a></li>
+                    <li><a href="index.html" class="lists__enlaces lists__a">Nuestra empresa</a></li>
                     <li><a href="#" class="lists__enlaces">Sucursales</a></li>
                     <li><a href="articulos.html" class="lists__enlaces">Promociones</a></li>
                 </ul>
